# briklab

./: .env.example  .gitignore  Makefile  README.md  SECURITY.md  docker-compose.level2.yml  docker-compose.yml  versions.env  versions.yml
.github/: dependabot.yml  trufflehog-exclude.txt
.github/workflows/: ci.yml
config/: brik-images.lock.yaml
config/jenkins/: casc.yaml  plugins.txt
config/registry/: config.yml
docs/: 20260520_e2e-validation-campaign.md  architecture.md  e2e-coverage.md  e2e-known-issues.md  operations.md
docs/e2e-validation-v0.6.0/: README.md
images/jenkins/: Dockerfile  entrypoint.sh
images/ssh-target/: Dockerfile  entrypoint.sh
policy/: brik-policy.yml
scripts/: briklab.sh  generate-versions.sh  infra.sh  setup-gitlab.sh  setup-jenkins.sh  setup-k3d.sh  setup-runner.sh  smoke-test.sh
scripts/lib/: checks.sh  common.sh  infra-refresh.sh  infra-verify.sh  preflight.sh  recovery.sh  runner-images.sh  verify.sh  versions.sh
test-projects/dotnet-complete/: .editorconfig  Dockerfile  DotnetComplete.sln  brik.yml
test-projects/dotnet-minimal/: .gitignore  .gitlab-ci.yml  DotnetMinimal.sln  brik.yml
test-projects/invalid-config/: brik.yml  package.json
test-projects/java-complete/: .gitlab-ci.yml  Dockerfile  brik.yml  pom.xml
test-projects/java-full/: .gitlab-ci.yml  Dockerfile  brik.yml  pom.xml
test-projects/java-minimal/: .gitignore  brik.yml  pom.xml
test-projects/monorepo-full/: README.md  brik.yml
test-projects/node-full/: brik.yml  (+4 more)
test-projects/python-complete/: .gitignore  .semgrepignore  Dockerfile  brik.yml  pyproject.toml
test-projects/python-complete/src/: calculator.py
test-projects/python-complete/tests/: test_calculator.py
test-projects/python-full/: .gitignore  Dockerfile  brik.yml  pyproject.toml
test-projects/python-minimal/: brik.yml  pyproject.toml
test-projects/python-minimal/src/: calculator.py
test-projects/python-minimal/tests/: test_calculator.py
(+235 files in other folders)
