[project]
name = "python-complete"
version = "0.1.0"
description = "Complete Python project for Brik E2E testing with Nexus publish"
requires-python = ">=3.10"
dependencies = ["pytest"]

[project.optional-dependencies]
dev = ["ruff", "pip-audit", "pytest-cov"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 120
