[project]
name = "python-minimal"
version = "0.1.0"
description = "Minimal Python project for Brik E2E testing"
requires-python = ">=3.10"
dependencies = ["pytest"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
